--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,42 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url(https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,700);
 
-a {
-  color: inherit;
-  text-decoration: none;
+
+:root {
+  --font-family: 'Rubik', sans-serif;
+	--color-3: #c1ac8d;
+	--color-4: #2D3748;
+	--color-5: #000000;
+
+  --color-bg: #fff;
+  --color-footer: #C1AC8D;
+
+	font-weight: 300;
+	font-style: normal;
+	font-size: 13px;
+	letter-spacing: .13em;
+	line-height: 1.4em;
+	text-transform: none;
+	color: rgba(0,0,0,.7);
 }
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body {
+  background: var(--color-bg)
 }
+
+a {
+  color: unset;
+  text-decoration: none;
+}
+
+
+.section__padding {
+	padding: 2rem 3rem;
+}
+
