--- a/components/About.module.css
+++ b/components/About.module.css
@@ -1,5 +1,3 @@
-
-
 .wrapper {
 	line-height: 1;
 	display: grid;
@@ -22,6 +20,31 @@
 
 
 }
+
+.heading {
+	font-family: "Exo", sans-serif;
+	font-size: 10vw !important;
+	font-weight: 900;
+	width: -webkit-min-content;
+	width: -moz-min-content;
+	width: min-content;
+	margin: auto;
+	text-transform: uppercase;
+	background: linear-gradient(219deg,
+			/* var(--color-1) 19%, 
+    transparent 19%,transparent 20%, 
+    var(--color-2) 20%, var(--color-2)  39%,
+    transparent 39%,transparent 40%,  */
+			var(--color-3) 41%, var(--color-3) 59%,
+			transparent 59%, transparent 60%,
+			var(--color-4) 60%, var(--color-4) 79%,
+			transparent 79%, transparent 80%,
+			var(--color-5) 80%);
+	background-clip: text;
+	-webkit-background-clip: text;
+	color: transparent;
+}
+
 
 @media screen and (min-width: 768px) {
 	.about-heading-wrapper h1 {
